--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body, html {
   font-size: 11px;
   width: 100%;
   height: 100%;
-  background: #c00;
+  background: rgb(196, 57, 57);
 
   background: -moz-radial-gradient(center, ellipse cover, #c00 0%, #500 100%);
   background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#c00), color-stop(100%,#500));
