--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ body {
 	];
 
         var year = new Date().getFullYear()+1;
-	var str = ["Merry Christmas!", "Happy New Year!", "Hello "+year+"!"];
+	var str = ["Merry Christmas!", "浪味仙子", "Hello "+year+"!"];
 
 	if (!String.prototype.format) {
 	  String.prototype.format = function() {
