--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@ body {
 <div class="title">圣 诞 快 乐</div>
 
 <div class="poem">
- <p>We wish you a Merry Christmas;
- <p>We wish you a Merry Christmas;
- <p>We wish you a Merry Christmas 
- <p>And a Happy New Year.
- <p>Good tidings we bring to you and your kin;
- <p>Good tidings for Christmas and 
- <p>A Happy New Year.	
+ <p>浪味仙子;
+ <p>I wish you a Merry Christmas;
+ <p>是与谁初次见面的秋季 
+ <p>让整片夕阳融化了孤寂
+ <p>亲吻着寒风吹凉的手心
+ <p>不计较冬天无心的冷意 
+ <p>赠与他人的心 换得来真意
 </div>
 <div class="footer christmas">
  
@@ -260,20 +260,20 @@ body {
 
 	var greeting = [
 		'printf("{0}");',
-		'cout << "{0}" << endl;',
+		'人生似飞花转无影',
 		'WriteLn("{0}");',
-		'System.out.println( "{0}" );',
+		'白云悠悠',
 		'print "{0}"',
-		'fmt.Println("{0}");',
+		'与温暖相遇',
 		'echo "{0}"',
 		'say "{0}"',
 		'print("{0}");',
 		'(print "{0}")',
 		'PRINT "{0}"',
 		'<%= "{0}" %>',
-		'System.Console.WriteLine("{0}");',
+		'每天爱你多一点',
 		'console.log("{0}");',
-		'document.write("{0}")',
+		'创伤&缝合',
 	];
 
         var year = new Date().getFullYear()+1;
