--- a/index.html
+++ b/index.html
@@ -240,17 +240,17 @@ body {
 <div class="title">圣 诞 快 乐</div>
 
 <div class="poem">
- <p>浪味仙子;
+ <p>浪味仙子
  <p>I wish you a Merry Christmas;
  <p>是与谁初次见面的秋季 
  <p>让整片夕阳融化了孤寂
  <p>亲吻着寒风吹凉的手心
  <p>不计较冬天无心的冷意 
- <p>赠与他人的心 换得来真意
+ <p>赠与他人的心 换得来真意？！
 </div>
 <div class="footer christmas">
  
- <p> Hao Chen @ <script>document.write(new Date().getFullYear())</script>
+ <p> 转动的四季 <script>document.write(new Date().getFullYear())</script>
 </div>
 
 </body>
@@ -259,7 +259,7 @@ body {
 <script type="text/javascript">
 
 	var greeting = [
-		'printf("{0}");',
+		'Merry Christmas!',
 		'人生似飞花转无影',
 		'WriteLn("{0}");',
 		'白云悠悠',
@@ -277,7 +277,7 @@ body {
 	];
 
         var year = new Date().getFullYear()+1;
-	var str = ["Merry Christmas!", "浪味仙子", "Hello "+year+"!"];
+	var str = ["梦", "浪味仙子", "Hello "+year+"!"];
 
 	if (!String.prototype.format) {
 	  String.prototype.format = function() {
