--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@ body {
 
 <div class="poem">
  <p>浪味仙子
- <p>I wish you a Merry Christmas;
- <p>是与谁初次见面的秋季 
+ <p>I wish you a Merry Christmas
+ <p>是与谁初次见面的冬季 
  <p>让整片夕阳融化了孤寂
  <p>亲吻着寒风吹凉的手心
  <p>不计较冬天无心的冷意 
@@ -250,7 +250,7 @@ body {
 </div>
 <div class="footer christmas">
  
- <p> 转动的四季 <script>document.write(new Date().getFullYear())</script>
+ <p> 转动的四季 by 从树 <script>document.write(new Date().getFullYear())</script>
 </div>
 
 </body>
@@ -277,7 +277,7 @@ body {
 	];
 
         var year = new Date().getFullYear()+1;
-	var str = ["梦", "浪味仙子", "Hello "+year+"!"];
+	var str = ["长生不老 永远不死", "浪味仙子", "Hello "+year+"!"];
 
 	if (!String.prototype.format) {
 	  String.prototype.format = function() {
