--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@ body {
  <p>让整片夕阳融化了孤寂
  <p>亲吻着寒风吹凉的手心
  <p>不计较冬天无心的冷意 
+ <p>不必问少年有多少痴情 无需知道
+ <p>不必问虚言有几分真意 早就明了
  <p>赠与他人的心 换得来真意？！
 </div>
 <div class="footer christmas">
@@ -262,18 +264,18 @@ body {
 		'Merry Christmas!',
 		'人生似飞花转无影',
 		'WriteLn("{0}");',
-		'白云悠悠',
-		'print "{0}"',
+		'白云悠悠 在人间 风波难平',
+		'来去都从容',
 		'与温暖相遇',
 		'echo "{0}"',
-		'say "{0}"',
+		'无论这无穷的岁月如何变幻',
 		'print("{0}");',
 		'(print "{0}")',
-		'PRINT "{0}"',
-		'<%= "{0}" %>',
+		'闭上眼温柔抚摸着脸颊',
+		'坚韧勇敢 无忧无惧 平安喜乐',
 		'每天爱你多一点',
 		'console.log("{0}");',
-		'创伤&缝合',
+		'创伤&缝合 万里无一！',
 	];
 
         var year = new Date().getFullYear()+1;
