--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ body {
 
 
 .title {
-  font-size: 72px;
+  font-size: 62px;
   font-weight: bold;
   width: 100%;
   text-align: center;
@@ -267,14 +267,12 @@ body {
 		'白云悠悠 在人间 风波难平',
 		'来去都从容',
 		'与温暖相遇',
-		'echo "{0}"',
+		'努力守护心中的小孩',
 		'无论这无穷的岁月如何变幻',
 		'print("{0}");',
-		'(print "{0}")',
 		'闭上眼温柔抚摸着脸颊',
 		'坚韧勇敢 无忧无惧 平安喜乐',
 		'每天爱你多一点',
-		'console.log("{0}");',
 		'创伤&缝合 万里无一！',
 	];
 
