--- a/index.html
+++ b/index.html
@@ -263,16 +263,16 @@ body {
 	var greeting = [
 		'Merry Christmas!',
 		'人生似飞花转无影',
-		'WriteLn("{0}");',
+		'健康 快乐 勇敢 坚韧 自由',
 		'白云悠悠 在人间 风波难平',
-		'来去都从容',
-		'与温暖相遇',
+		'来去都从容 与温暖相遇',
+		'白云悠悠 一缕飞去千万里',
 		'努力守护心中的小孩',
 		'无论这无穷的岁月如何变幻',
 		'print("{0}");',
 		'闭上眼温柔抚摸着脸颊',
 		'坚韧勇敢 无忧无惧 平安喜乐',
-		'每天爱你多一点',
+		'每天爱你多一点 幽幽清香在飘送',
 		'创伤&缝合 万里无一！',
 	];
 
